--- a/Application/helm/values.yaml
+++ b/Application/helm/values.yaml
@@ -2,8 +2,8 @@ ReplicaNumber: 3
 
 containers:
   containerPort: 8080
-  image: 'quay.io/daniel_shani/hello_world:v2'
-  tag: 'base'
+  image: 'quay.io/daniel_shani/hello_world:'
+  tag: 'v2'
 
 service:
   servicePort: 8080
