--- a/Application/helm/values.yaml
+++ b/Application/helm/values.yaml
@@ -3,7 +3,7 @@ ReplicaNumber: 3
 containers:
   containerPort: 8080
   image: 'quay.io/daniel_shani/hello_world'
-  tag: 'v2'
+  tag: 'chart_v1'
 
 service:
   servicePort: 8080
