--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         volumeMounts:
           - name: index-html
-            mountPath: /tmp/html # this will mount the html.index file to it application location
+            mountPath: /tmp/html
         - resources: {}
           terminationMessagePath: /dev/termination-log
           name: {{ .Chart.Name }}
